# agent_cli_langchain

./: .gitignore  CONTRIBUTING.md  README.md  design-deck.md  design-deck.pptx  pyproject.toml
docs/superpowers/plans/: 2026-04-27-langchain-agents-cli.md
docs/superpowers/specs/: 2026-04-27-langchain-agents-cli-design.md  2026-04-27-pivot-to-skills-only.md
skills/: langchain-agents-deepagents-code.md  langchain-agents-deploy.md  langchain-agents-langchain-code.md  langchain-agents-langgraph-code.md  langchain-agents-langsmith-evals.md  langchain-agents-observability.md  langchain-agents-workflow.md
skills/langchain-agents-deepagents-code/: SKILL.md
skills/langchain-agents-langsmith-evals/: SKILL.md
skills/langchain-agents-middleware/: SKILL.md
skills/langchain-agents-observability/: SKILL.md
skills/langchain-agents-scaffold/: SKILL.md
skills/langchain-agents-workflow/: SKILL.md
src/lcagents/: __main__.py  cli.py  coding_agents.py  config.py  scaffold.py  templating.py  upgrade.py
src/lcagents/commands/: deploy.py  dev.py  evals.py  info.py  install.py  lint.py  login.py  run.py  scaffold.py  setup.py
src/lcagents/skills/: lcagents-deepagents-code.md  lcagents-deploy.md  lcagents-langchain-code.md  lcagents-langgraph-code.md  lcagents-langsmith-evals.md  (+3 more)
tests/: conftest.py  test_coding_agents.py  test_config.py  test_deploy_docker.py  test_enhance.py  test_evals.py  test_info.py  test_login.py  test_run.py  test_scaffold.py  test_setup.py  test_skills_present.py  test_templating.py  test_upgrade.py  test_wrappers.py
tests/integration/: test_e2e.py
(+43 files in other folders)
