[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-agents-cli"
version = "0.1.0"
description = "A tool for coding agents to scaffold, run, evaluate, and deploy LangChain / LangGraph / DeepAgents projects."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Chaminda Wijayasundara", email = "cwijay@biz2bricks.ai"}]
license = "Apache-2.0"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "questionary>=2.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "docker>=7.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-docker>=3.1",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
lcagents = "lcagents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lcagents"]

[tool.hatch.build.targets.wheel.force-include]
"src/lcagents/templates" = "lcagents/templates"
"src/lcagents/skills" = "lcagents/skills"
"src/lcagents/project_skills" = "lcagents/project_skills"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
